Fix list item action buttons on IE10
* [IE10] Fix action items overflowing on suggestion and translation lists
* [IE10/11] Fix source > target language meta info position on suggestion list

Bug: T173060

--- a/modules/dashboard/styles/ext.cx.suggestionlist.less
+++ b/modules/dashboard/styles/ext.cx.suggestionlist.less
@@ -110,6 +110,18 @@
 		line-height: 1.2;
 		text-align: justify;
 
+		+ .cx-slitem__meta {
+			.target-ie( {
+				margin-top: 20px;
+			} );
+		}
+
+		&:empty + .cx-slitem__meta {
+			.target-ie( {
+				margin-top: 35px;
+			} );
+		}
+
 		&:before {
 			// This is needed so we can use localized 'ellipsis'
 			content: attr( data-ellipsis );
@@ -134,7 +146,6 @@
 }
 
 .cx-slitem__details {
-	position: relative;
 	min-width: 0;
 	width: 100%;
 	min-height: 84px;
@@ -143,9 +154,23 @@
 
 	.flex-display( box ); // Support 2009 syntax
 	.flex-display;
+	-ms-flex-direction: column; // Support IE10
 	-webkit-box-orient: vertical;
 	-webkit-flex-direction: column;
 	flex-direction: column;
+
+	.target-ie( {
+		width: auto;
+		max-width: 70%;
+	} );
+
+	/* stylelint-disable */
+	/* Don't apply width override to IE11 */
+	_:-ms-fullscreen,
+	:root & {
+		width: 100%;
+	}
+	/* stylelint-enable */
 
 	.cx-slitem__translation-link {
 		.mw-ui-one-whole;
@@ -171,7 +196,12 @@
 	.flex-display( box ); // Support 2009 syntax
 	.flex-display;
 
+	.target-ie( {
+		margin-left: auto;
+	} );
+
 	@media only screen and ( max-width: ( @narrow - 1px ) ) {
+		-ms-flex-direction: column-reverse;
 		-webkit-flex-direction: column-reverse;
 		flex-direction: column-reverse;
 		-webkit-box-pack: end; // iOS 6-, Safari 3.1-6
